// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`factory-validation > should allow array destructuring parameters in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const [a, b] = [1, 2]; return { a, b }; });
"
`;

exports[`factory-validation > should allow array destructuring with holes in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const [, b] = [1, 2]; return b; });
"
`;

exports[`factory-validation > should allow case-insensitive mock prefix 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ a: MockClass, b: MOCK_VALUE, c: mockFn }));
"
`;

exports[`factory-validation > should allow catch clause variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { try { }
catch (e) {
    return e;
} });
"
`;

exports[`factory-validation > should allow destructuring parameters in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const { a, b } = { a: 1, b: 2 }; return { a, b }; });
"
`;

exports[`factory-validation > should allow function declarations inside factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { function helper() { return 1; } return helper(); });
"
`;

exports[`factory-validation > should allow nested object destructuring in factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const { a: { b } } = { a: { b: 1 } }; return b; });
"
`;

exports[`factory-validation > should allow property access on allowed objects 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ fn: jest.fn() }));
"
`;

exports[`factory-validation > should allow shorthand property with allowed name 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ undefined }));
"
`;

exports[`factory-validation > should hoist factory referencing __coverage variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => cov_hash123);
import { foo } from "./foo";
"
`;

exports[`factory-validation > should hoist factory referencing allowed identifiers 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ x: undefined, y: NaN, z: Infinity }));
import { foo } from "./foo";
"
`;

exports[`factory-validation > should hoist factory referencing coverage variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => __cov_x);
import { foo } from "./foo";
"
`;

exports[`factory-validation > should hoist factory referencing jest and expect 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => jest.fn());
import { foo } from "./foo";
"
`;

exports[`factory-validation > should hoist factory referencing mock-prefixed variable 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => mockFoo);
import { foo } from "./foo";
"
`;

exports[`factory-validation > should hoist factory with function parameters 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { return (a: string) => a; });
import { foo } from "./foo";
"
`;

exports[`factory-validation > should hoist factory with local variables 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => { const x = 1; return x; });
import { foo } from "./foo";
"
`;

exports[`factory-validation > should hoist mock with no factory 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo");
import { foo } from "./foo";
"
`;

exports[`factory-validation > should not validate non-function second argument 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", options);
import { foo } from "./foo";
"
`;

exports[`factory-validation > should not validate unmock factories 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.unmock("./foo");
import { foo } from "./foo";
"
`;

exports[`factory-validation > should skip property names in object literals 1`] = `
"import { jest } from "@rbxts/jest-globals";
jest.mock("./foo", () => ({ someVar: 42 }));
"
`;
